--- a/css/startmin.css
+++ b/css/startmin.css
@@ -154,7 +154,7 @@ body {
 @media(min-width:768px) {
     .sidebar {
         z-index: 1;
-        position: absolute;
+        position: fixed;
         width: 250px;
         margin-top: 51px;
     }
@@ -754,7 +754,7 @@ button:hover{
     color: white;
     /* padding: 10px 20px; */
     width: 100%;
-    position: fixed;
+    /* position: fixed; */
     bottom: 0;
     left: 0;
     /* margin-top: 40px; */
