footer issue fixed

--- a/css/startmin.css
+++ b/css/startmin.css
@@ -764,7 +764,7 @@ button:hover{
     padding-left: 50px;
     padding-right: 50px;
     padding-top: 5px;
-    padding-bottom: 0;
+    padding-bottom: 5px;
 }
 
    .landing-container{
