--- a/css/templatemo-digimedia-v3.css
+++ b/css/templatemo-digimedia-v3.css
@@ -849,7 +849,7 @@ preloader
     height: 16px;
     top: 12px;
     left: 15px;
-    background: #4da6e7;
+    background: #005fa2;
     border-radius: 50%;
     -webkit-transform: translateX(0);
     transform: translateX(0);
@@ -919,6 +919,7 @@ Banner Style
 
 .main-banner .left-content {
   margin-right: 15px;
+  margin-top: -100px;
 }
 
 .main-banner .left-content h6 {
@@ -958,7 +959,7 @@ Banner Style
 .main-banner .right-image video {
   max-width: 593px;
   width: 100%;
-  margin-top: -70px;
+  margin-top: -100px;
   height: auto;
   padding-left: 30px;
 
@@ -1956,6 +1957,47 @@ footer p a {
   color: #fff;
   transition: all .5s;
 }
+
+
+/* h1 {
+  position: relative;
+  padding-top: 25px;
+  padding-right: -50%;
+  margin: 0;
+  font-family: "Raleway", sans-serif;
+  font-weight: 300;
+  font-size: 40px;
+  color: #080808;
+  -webkit-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
+}
+
+h1 span {
+  display: block;
+  font-size: 0.5em;
+  line-height: 1.3;
+}
+h1 em {
+  font-style: normal;
+  font-weight: 600;
+} */
+
+
+.twelve h1 {
+  font-size:26px; 
+  font-weight:700;  
+  letter-spacing:1px;
+  text-transform:uppercase; 
+  width:160px; 
+  text-align:center; 
+   white-space:nowrap; 
+  padding-bottom:20px;
+  padding-top: 20px;
+  
+}
+
+
 
 /* 
 ---------------------------------------------
